@@ -28,6 +28,49 @@ App.VertexTasksController = App.TablePageController.extend(App.AutoCounterColumn
 
   cacheDomain: Ember.computed.alias('controllers.vertex.dagID'),
 
+  pollster: App.Helpers.EntityArrayPollster.create(),
+
+  init: function () {
+    this._super();
+    this.get('pollster').setProperties({
+      entityType: 'taskInfo',
+      mergeProperties: ['status', 'progress'],
+      store: this.get('store')
+    });
+  },
+
+  pollsterControl: function () {
+    if(this.get('dag.status') == 'RUNNING' &&
+        this.get('dag.amWebServiceVersion') != '1' &&
+        !this.get('loading') && this.get('isActive') &&
+        this. get('rowsDisplayed.length') > 0) {
+      this.get('pollster').start();
+    }
+    else {
+      this.get('pollster').stop();
+    }
+  }.observes('dag.status', 'dag.amWebServiceVersion', 'rowsDisplayed', 'loading', 'isActive'),
+
+  pollsterOptionsObserver: function () {
+    var rows = this.get('rowsDisplayed');
+    this.set('pollster.targetRecords', rows);
+
+    this.set('pollster.options', (rows && rows.length) ? {
+      appID: this.get('dag.applicationId'),
+      dagID: this.get('dag.idx'),
+      counters: this.get('countersDisplayed'),
+      taskID: rows.map(function (row) {
+          var taskIndex = App.Helpers.misc.getIndexFromId(row.get('id')),
+          vertexIndex = App.Helpers.misc.getIndexFromId(row.get('vertexID'));
+          return '%@_%@'.fmt(vertexIndex, taskIndex);
+        }).join(',')
+    } : null);
+  }.observes('dag.applicationId', 'dag.idx', 'rowsDisplayed', 'counters'),
+
+  countersDisplayed: function () {
+    return App.Helpers.misc.getCounterQueryParam(this.get('columns'));
+  }.property('columns'),
+
   beforeLoad: function () {
     var controller = this.get('controllers.vertex'),
         model = controller.get('model');
@@ -96,6 +139,7 @@ App.VertexTasksController = App.TablePageController.extend(App.AutoCounterColumn
         headerCellName: 'Status',
         templateName: 'components/basic-table/status-cell',
         contentPath: 'status',
+        observePath: true,
         getCellContent: function(row) {
           var status = row.get('status');
           return {
@@ -104,6 +148,13 @@ App.VertexTasksController = App.TablePageController.extend(App.AutoCounterColumn
               row.get('hasFailedTaskAttempts'))
           };
         }
+      },
+      {
+        id: 'progress',
+        headerCellName: 'Progress',
+        contentPath: 'progress',
+        observePath: true,
+        templateName: 'components/basic-table/progress-cell'
       },
       {
         id: 'startTime',
